--- a/webpage/templates/abouts.html
+++ b/webpage/templates/abouts.html
@@ -1,9 +1,16 @@
+{% extends '_base.html' %}
 {% block title %}
 
 {% endblock title %}
 
 
 {% block content %}
+<div class="about">
+    <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Index</a></li>
+        <li><a href="#">Contact Us</a></li>
+    </ul> 
+</div>
 
-
-{% block content %}
+{% endblock content %}
