--- a/webpage/templates/_base.html
+++ b/webpage/templates/_base.html
@@ -12,6 +12,13 @@
     <link rel="stylesheet" href="{% static 'css/core.css' %}">
 </head>
 <body>
+    <div class="about">
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Index</a></li>
+            <li><a href="#">Contact Us</a></li>
+        </ul> 
+    </div>
     {% block content %}
     {% endblock content %}
 </body>
