--- a/webpage/static/css/core.css
+++ b/webpage/static/css/core.css
@@ -1,3 +1,73 @@
-h1{
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
+}
+
+header{
+    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('{% static "img/sa.png" %}'); 
+    height: 150vh;
+    background-size: cover;
+    background-position: center;
+}
+
+ul{
+    float: right;
+    list-style-type: none;
+    margin-top: 20px;
+}
+ul li{
+    display: inline-block;
+}
+
+ul li a{
+    text-decoration: none;
+    color: black;
+    padding: 5px 20px;
+    border: 1px solid black;
+    transition: 0.6s ease;
+}
+
+ul li a:hover{
+    background-color: black;
     color: red;
 }
+ul li.active a{
+    background-color: black;
+    color: red;
+}
+.main{
+    max-width: 1200px;
+    margin: auto;
+}
+
+.title{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.title h1{
+    color: black;
+    font-size: 70px;
+}
+.button{
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.btn{
+    border: 1px solid black;
+    padding: 10px 30px;
+    color: orange;
+    text-decoration: none;
+}
+
+.btn:hover{
+    background-color: orange;
+    color: black;
+}
+
