--- a/webpage/static/css/core.css
+++ b/webpage/static/css/core.css
@@ -5,9 +5,25 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
-
+html, body {
+    margin: 0;
+    padding: 0;
+  }
+img{
+    /* background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));  */
+    /* background-size: 100% 100%; */
+    position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
 header{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('{% static "img/sa.png" %}'); 
+    
     height: 150vh;
     background-size: cover;
     background-position: center;
@@ -23,24 +39,41 @@ ul li{
 }
 
 ul li a{
+    font-family:'Courier New', Courier, monospace;
     text-decoration: none;
     color: black;
     padding: 5px 20px;
     border: 1px solid black;
+    border-radius: 20px;
     transition: 0.6s ease;
 }
 
 ul li a:hover{
     background-color: black;
-    color: red;
+    color: white;
 }
-ul li.active a{
-    background-color: black;
-    color: red;
-}
+
 .main{
     max-width: 1200px;
     margin: auto;
+}
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    height: 100vh;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .title{
@@ -50,24 +83,29 @@ ul li.active a{
     transform: translate(-50%, -50%);
 }
 .title h1{
-    color: black;
+    /* position: absolute; */
+    text-align: center;
+    color: white;
     font-size: 70px;
+    font-family:fantasy;
 }
 .button{
     position: absolute;
-    top: 62%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 .btn{
+    font-family:'Courier New', Courier, monospace;
     border: 1px solid black;
+    border-radius: 20px;
     padding: 10px 30px;
-    color: orange;
+    color: white;
     text-decoration: none;
 }
 
 .btn:hover{
-    background-color: orange;
+    background-color: white;
     color: black;
 }
 
