--- a/webpage/templates/index.html
+++ b/webpage/templates/index.html
@@ -13,6 +13,17 @@
 </div>
 <div class="button">
     <a href="#" class="btn">ENTER TEXT FOR ANALYSIS</a>
+    <!-- <a href="#" class="btn">ASPECT</a> -->
+    <!-- <a href="#" class="btn">SENTIMENT</a> -->
 </div>
+<div class="box1">
+    <a href="#" class="b1">SENTIMENT</a>
+</div>
+<div class="box2">
+    <a href="#" class="b2">ASPECT</a>
+</div>
+
+
+
     
 {% endblock content %}
