--- a/webpage/static/css/core.css
+++ b/webpage/static/css/core.css
@@ -1,45 +1,45 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
+
 html, body {
     margin: 0;
     padding: 0;
-  }
-img{
-    /* background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));  */
-    /* background-size: 100% 100%; */
-    position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  z-index: -1;
 }
-header{
-    
+
+img {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+header {
     height: 150vh;
     background-size: cover;
     background-position: center;
 }
 
-ul{
+ul {
     float: right;
     list-style-type: none;
     margin-top: 20px;
 }
-ul li{
+
+ul li {
     display: inline-block;
 }
 
-ul li a{
-    font-family:'Courier New', Courier, monospace;
+ul li a {
+    font-family: 'Courier New', Courier, monospace;
     text-decoration: none;
     color: black;
     padding: 5px 20px;
@@ -48,15 +48,16 @@ ul li a{
     transition: 0.6s ease;
 }
 
-ul li a:hover{
+ul li a:hover {
     background-color: black;
     color: white;
 }
 
-.main{
+.main {
     max-width: 1200px;
     margin: auto;
 }
+
 body {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
@@ -76,80 +77,84 @@ body {
     }
 }
 
-.title{
+.title {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.title h1{
-    /*position: absolute;*/
-    /* top: 30%; */
+
+.title h1 {
     text-align: center;
     color: white;
     font-size: 70px;
-    font-family:fantasy;
+    font-family: fantasy;
 }
-.button{
+
+.button {
     position: absolute;
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-.btn{
-    font-family:'Courier New', Courier, monospace;
+.btn {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
     border: 1px solid black;
     border-radius: 20px;
     padding: 10px 30px;
     color: white;
     text-decoration: none;
+    width: auto !important;
+    transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-
-.btn:hover{
+.btn:hover,
+.btn:focus {
     background-color: white;
     color: black;
+    outline: none;
+    border-color: black;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
-
-.box1{
+.box1 {
     position: absolute;
     top: 77%;
     left: 45%;
-    /* transform: translate(30px);  */
 }
-.b1{
-    /* top: 50%; */
-    /* transform: translate(30px); */
-    font-family:'Courier New', Courier, monospace;
+
+.b1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
     border: 1px solid black;
     border-radius: 20px;
     padding: 10px 30px;
     color: white;
     text-decoration: none;
 }
-.box2{
+
+.box2 {
     position: absolute;
     top: 85%;
     left: 46%;
-    /* transform: translate(30px);  */
 }
-.b2{
-    /* top: 60%; */
-    /* transform: translate(50px); */
-    font-family:'Courier New', Courier, monospace;
+
+.b2 {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
     border: 1px solid black;
     border-radius: 20px;
     padding: 10px 30px;
     color: white;
     text-decoration: none;
 }
-.b1:hover{
-    background-color: white;
-    color: black;
-}
-.b2:hover{
+
+.b1:hover {
     background-color: white;
     color: black;
 }
 
-
+.b2:hover {
+    background-color: white;
+    color: black;
+}
