--- a/webpage/templates/_base.html
+++ b/webpage/templates/_base.html
@@ -20,7 +20,7 @@
             <ul>
                 <li class="active"><a href="{%url 'home'%}">Home</a></li>
                 <li class="active2"><a href="{%url 'abouts'%}">About</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li class="active3"><a href="{%url 'contact'%}">Contact Us</a></li>
             </ul>
         </div>      
     </header>
