--- a/webpage/templates/abouts.html
+++ b/webpage/templates/abouts.html
@@ -7,6 +7,20 @@
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/about.css' %}">
+<!-- <img src="{% static 'img/2.png' %}"> -->
+
+<div class="pic">
+    
+</div>
+<div class="question">
+    <h2>What is<span id="design">  Aspect Based Sentiment Analysis?</span></h2>
+</div>
+
+<div class="description">
+    <span id="absa">'Aspect Based Sentiment Analysis'</span> is the task of determining the sentiment of a text with respect to a specific aspect. 
+    Aspect-based sentiment analysis is a relatively new field of research that has emerged in 
+    response to the limitations of traditional sentiment analysis methods.
+</div>
 
 
 {% endblock content %}
