--- a/webpage/static/css/core.css
+++ b/webpage/static/css/core.css
@@ -10,17 +10,7 @@ html, body {
     padding: 0;
 }
 
-img {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
+ 
 
 header {
     height: 150vh;
@@ -105,8 +95,11 @@ body {
     padding: 10px 30px;
     color: white;
     text-decoration: none;
-    width: auto !important;
+    /* width: auto !important; */
     transition: border-color 0.3s, box-shadow 0.3s;
+
+    width: 100%; /* Set the width to fill the available space */
+    /* height: 100px; */
 }
 
 .btn:hover,
@@ -158,3 +151,7 @@ body {
     background-color: white;
     color: black;
 }
+
+
+/* ===============ABOUT PAGE ================*/
+
