--- a/webpage/static/css/about.css
+++ b/webpage/static/css/about.css
@@ -65,10 +65,23 @@ ul li.active2 a{
 .pic {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7), url(../img/try.jpg));
-
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7));
+    /* background-image: url('/static/img/try.jpg'); */
     background-position: center;
-    background-size:cover;
+    background-size: cover;
     position: relative;
 }
 
+.pic::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('/static/img/try.jpg');
+    background-position: center;
+    background-size: cover;
+    opacity: 0.7;
+    z-index: -1;
+}
