--- a/webpage/templates/abouts.html
+++ b/webpage/templates/abouts.html
@@ -9,9 +9,7 @@
 <link rel="stylesheet" href="{% static 'css/about.css' %}">
 <!-- <img src="{% static 'img/2.png' %}"> -->
 
-<div class="pic">
-    
-</div>
+
 <div class="question">
     <h2>What is<span id="design">  Aspect Based Sentiment Analysis?</span></h2>
 </div>
@@ -21,6 +19,44 @@
     Aspect-based sentiment analysis is a relatively new field of research that has emerged in 
     response to the limitations of traditional sentiment analysis methods.
 </div>
+
+<div class="tech">
+    <h3>Technologies Used:</h3>
+    <span id="random"><p>Numpy</p>
+        <p>Torch</p>
+        <p>Scikit-Learn</p>
+        <p>Gensim</p>
+        <p>Pandas</p>
+        <p>NLTK</p>
+        <p>Django</p></span>
+
+</div>
+<div class="e1">
+    <i class="fa-solid fa-face-smile fa-10x"></i>
+</div>
+<div class="e2">
+    <i class="fa-solid fa-face-sad-tear fa-10x"></i>
+</div>
+
+
+<div class="i1">
+    <img src="{% static 'img/numpy.png'%}" alt="">
+</div>
+<div class="i2">
+    <img src="{% static 'img/scikit.png'%}" alt="">
+</div>
+<div class="i3">
+    <img src="{% static 'img/pytorch.png'%}" alt="">
+</div>
+<div class="i4">
+    <img src="{% static 'img/django.png'%}" alt="">
+</div>
+
+
+
+
+
+
 
 
 {% endblock content %}
