--- a/webpage/static/css/contact.css
+++ b/webpage/static/css/contact.css
@@ -1,6 +1,6 @@
 ul li.active3 a{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
 
 /* .question {
