--- a/webpage/static/css/index.css
+++ b/webpage/static/css/index.css
@@ -1,13 +1,13 @@
 .title {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .button {
     position: absolute;
-    top: 70%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -52,7 +52,34 @@ label {
 
 
 ul li.active a{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
 
+.history {
+    /* display: inline-block;  */
+    position: absolute;
+    top: 115%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+
+
+    text-align: center;
+    color:  black;
+    font-size: 20px;
+    font-family: fantasy;
+
+    background-color: transparent;
+    width: 800px;
+    border: 2px solid black;
+    border-radius: 80px;
+    padding: 30px;
+    margin: 10px;
+}
+
+#rand {
+    color:white;
+    font-size: 20px;
+    font-weight: 100;
+    font-family: fantasy;
+}
