--- a/webpage/templates/contact.html
+++ b/webpage/templates/contact.html
@@ -9,7 +9,63 @@
 <link rel="stylesheet" href="{% static 'css/contact.css' %}">
 <!-- <img src="{% static 'img/2.png' %}"> -->
 
-<span class="input" role="textbox" contenteditable>99</span>
+<!-- <section class="us">
+    <div class="row">
+        <div class="col">
+            <img src="{% static 'img/siam.jpg'%}">
+            <h4>M.F.R. Siam</h4>
+            <p>ID: 2011596642</p>
+            <p>email: m.siam@northsouth.edu</p>
+        </div>
+        <div class="col">
+            <img src="{% static 'img/me.jpg'%}">
+            <h4>Narmeen Wafa</h4>
+            <p>ID: 2022381642</p>
+            <p>email: narmeen.wafa@northsouth.edu</p>
+        </div>
+    </div>
+</section> -->
 
+<div class="container py-5">
+    <div class="row text-center text-black">
+        <div class="col-lg-8 mx-auto">
+            <h1 class="display-4">Meet the gang!</h1>
+        </div>
+    </div>
+</div><!-- End -->
+
+
+<div class="container">
+    <div class="row text-center">
+
+        <!-- Team item -->
+        <div class="col-xl-3 col-sm-6 mb-5">
+            <div class="bg-white rounded shadow-sm py-5 px-4"><img src="{% static 'img/siam.jpg'%}" alt="" width="120" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0">M.F.R. Siam</h5><span class="small text-center">email: m.siam@northsouth.edu</span>
+            </div>
+        </div><!-- End -->
+
+        <!-- Team item -->
+        <div class="col-xl-3 col-sm-6 mb-5">
+            <div class="bg-white rounded shadow-sm py-5 px-4"><img src="{% static 'img/me4.jpg'%}" alt="" width="120" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0">Narmeen Wafa</h5><span class="small text-center">email: narmeen.wafa@northsouth.edu</span>
+            </div>
+        </div><!-- End -->
+
+        <!-- Team item -->
+        <div class="col-xl-3 col-sm-6 mb-5">
+            <div class="bg-white rounded shadow-sm py-5 px-4"><img src="{% static 'img/anisha.jpg'%}" alt="" width="120" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0">Anisha Tasneem</h5><span class="small text-center">email: anisha.tasneem@northsouth.edu</span>
+            </div>
+        </div><!-- End -->
+
+        <!-- Team item -->
+        <div class="col-xl-3 col-sm-6 mb-5">
+            <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://bootstrapious.com/i/snippets/sn-team/teacher-7.jpg" alt="" width="120" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                <h5 class="mb-0">Sujana Rahman Khan</h5><span class="small text-center">email: sujana.khan@northsouth.edu</span>
+            </div>
+        </div><!-- End -->
+    </div>
+</div>
 
 {% endblock content %}
